cargo-features = ["edition"]

[package]
name = "tanya"
version = "0.1.0"
authors = ["msiglreith <m.siglreith@gmail.com>"]
edition = '2018'

[lib]
name = "tanya"
path = "src/lib.rs"

[workspace]
members = [
    "libjobs",
    "librender",
]

[dependencies]
tanya-jobs = { path = "libjobs" }
tanya-render = { path = "librender" }
winapi = "0.3"

[dev-dependencies]
failure = "0.1.2"
winit = "0.17"
d3d12 = { git = "https://github.com/msiglreith/d3d12-rs.git" }

[[example]]
name = "jobs"
path = "examples/jobs.rs"

[[example]]
name = "hati"
path = "examples/hati.rs"
