[package]
name = "tanya"
version = "0.1.0"
authors = ["msiglreith <m.siglreith@gmail.com>"]
edition = '2018'

[lib]
name = "tanya"
path = "src/lib.rs"

[workspace]
members = [
    "libash-vma",
    "libjobs",
    "librender",
    "librender2",
    "libecs",
    "libecs_derive",
]

[dependencies]
tanya-jobs = { path = "libjobs" }
tanya-render = { path = "librender" }
tanya-render2 = { path = "librender2" }
tanya-ecs = { path = "libecs" }
tanya-ecs-derive = { path = "libecs_derive" }

[dev-dependencies]
failure = "0.1.2"
winit = "0.17"
d3d12 = { git = "https://github.com/msiglreith/d3d12-rs.git" }

[[example]]
name = "jobs"
path = "examples/jobs.rs"

[[example]]
name = "ecs"
path = "examples/ecs.rs"

[[example]]
name = "hati"
path = "examples/hati.rs"

# [patch.'https://github.com/msiglreith/d3d12-rs.git']
# d3d12 = { path = "../repository/d3d12-rs" }
