cargo-features = ["edition"]

[package]
name = "tanya-jobs"
version = "0.1.0"
authors = ["msiglreith <m.siglreith@gmail.com>"]
edition = '2018'

[lib]
name = "tanya_jobs"
path = "src/lib.rs"

[dependencies]
futures-preview = "0.3.0-alpha.3"
rayon = { git = "https://github.com/msiglreith/rayon.git", branch = "futures" }
