[package]
name = "tanya-render"
version = "0.1.0"
authors = ["msiglreith <m.siglreith@gmail.com>"]
edition = '2018'

[lib]
name = "tanya_render"
path = "src/lib.rs"

[dependencies]
ash = "0.26"
lazy_static = "1.1"
winit = "0.17"
winapi = "0.3"
vk-sync = "0.1.2"

[dev-dependencies]
failure = "0.1.2"

[[example]]
name = "triangle"
path = "examples/triangle.rs"
